--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="gapopa_assessment">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="https://github.com/randomlee101/dock-demo/blob/main/icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="https://github.com/randomlee101/dock-demo/blob/main/favicon.png"/>
 
   <title>gapopa_assessment</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="https://github.com/randomlee101/dock-demo/blob/main/manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="https://github.com/randomlee101/dock-demo/blob/main/flutter_bootstrap.js" async></script>
 </body>
 </html>
