--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+<!--   <base href="/"> -->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -23,15 +23,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="gapopa_assessment">
-  <link rel="apple-touch-icon" href="https://github.com/randomlee101/dock-demo/blob/main/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://github.com/randomlee101/dock-demo/blob/main/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>gapopa_assessment</title>
-  <link rel="manifest" href="https://github.com/randomlee101/dock-demo/blob/main/manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="https://github.com/randomlee101/dock-demo/blob/main/flutter_bootstrap.js" async></script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
